--- a/report/thesis/references.bib
+++ b/report/thesis/references.bib
@@ -47,6 +47,15 @@
   publisher = {Springer}
 }
 
+@misc{AreWeStackefficient2022,
+  title = {Are We Stack-Efficient Yet?},
+  year = {2022},
+  month = nov,
+  url = {https://web.archive.org/web/20221128082216/https://arewestackefficientyet.com/},
+  urldate = {2024-06-08},
+  file = {/Users/charlielidbury/Zotero/storage/RF8IJXPZ/arewestackefficientyet.com.html}
+}
+
 @misc{ATSHome,
   title = {{{ATS-Home}}},
   url = {https://www.cs.bu.edu/~hwxi/atslangweb/Home.html},
@@ -122,6 +131,12 @@
   urldate = {2024-02-02},
   abstract = {In this paper, we present AFL++, a community-driven open-source tool that incorporates state-of-the-art fuzzing research, to make the research comparable, reproducible, combinable and--most importantly - useable. It offers a variety of novel features, for example its Custom Mutator API, able to extend the fuzzing process at many stages. With it, mutators for specific targets can also be written by experienced security testers. We hope for AFL++ to become a new baseline tool not only for current, but also for future research, as it allows to test new techniques quickly, and evaluate not only the effectiveness of the single technique versus the state-of-the-art, but also in combination with other techniques. The paper gives an evaluation of hand-picked fuzzing technologies -- shining light on the fact that while each novel fuzzing method can increase performance in some targets -- it decreases performance for other targets. This is an insight future fuzzing research should consider in their evaluations.},
   file = {/Users/charlielidbury/Zotero/storage/YG8ZD9WS/Fioraldi et al. - 2020 - AFL++ combining incremental steps of fuzzing rese.pdf}
+}
+
+@misc{GccVsClassic,
+  title = {C Gcc~vs~{{Classic Fortran}} - {{Which}} Programs Are Fastest? ({{Benchmarks Game}})},
+  url = {https://benchmarksgame-team.pages.debian.net/benchmarksgame/fastest/gcc-ifc.html},
+  urldate = {2024-06-08}
 }
 
 @inproceedings{groceSwarmTesting2012a,
@@ -320,6 +335,12 @@
   file = {/Users/charlielidbury/Zotero/storage/W2X47UYA/title-page.html}
 }
 
+@misc{RustVsWhich,
+  title = {Rust~vs~{{C}}++ G++ - {{Which}} Programs Are Fastest? ({{Benchmarks Game}})},
+  url = {https://benchmarksgame-team.pages.debian.net/benchmarksgame/fastest/rust-gpp.html},
+  urldate = {2024-06-08}
+}
+
 @misc{stackoverflow,
   title = {{{StackOverflow}} Developer Survey},
   year = {2021},
@@ -362,6 +383,19 @@
   url = {https://project-everest.github.io/everparse/},
   urldate = {2024-01-25},
   file = {/Users/charlielidbury/Zotero/storage/9ITH4RI8/everparse.html}
+}
+
+@book{wilsonComparativeProgrammingLanguages2001,
+  title = {Comparative Programming Languages},
+  author = {Wilson, Leslie Blackett and Clark, Robert G.},
+  year = {2001},
+  series = {International Computer Sciences Series},
+  edition = {3rd ed},
+  publisher = {Addison-Wesley},
+  address = {Harlow London New York [etc.]},
+  isbn = {978-0-201-71012-0},
+  langid = {english},
+  lccn = {005.13}
 }
 
 @misc{xiAppliedTypeSystem2017,
